--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "type": "git",
     "url": "git+https://github.com/amcharts/amcharts3-react.git"
   },
-  "version": "1.1.8"
+  "version": "1.1.8",
+  "dependencies": {
+    "create-react-class": "^15.6.2"
+  }
 }
